[gd_scene load_steps=5 format=2]

[ext_resource path="res://Pad.gd" type="Script" id=1]
[ext_resource path="res://school/Lessons/LessonFont.otf" type="DynamicFontData" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.203922, 0.203922, 0.203922, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0, 0, 0, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=2]
size = 50
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[node name="Pad" type="Control"]
margin_left = 35.0
margin_top = 150.0
margin_right = 75.0
margin_bottom = 190.0
script = ExtResource( 1 )

[node name="1" type="Button" parent="."]
margin_top = 165.0
margin_right = 70.0
margin_bottom = 235.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "1"

[node name="2" type="Button" parent="."]
margin_left = 75.0
margin_top = 165.0
margin_right = 145.0
margin_bottom = 235.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "2"

[node name="3" type="Button" parent="."]
margin_left = 150.0
margin_top = 165.0
margin_right = 220.0
margin_bottom = 235.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "3"

[node name="4" type="Button" parent="."]
margin_top = 90.0
margin_right = 70.0
margin_bottom = 160.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "4"

[node name="5" type="Button" parent="."]
margin_left = 75.0
margin_top = 90.0
margin_right = 145.0
margin_bottom = 160.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "5"

[node name="6" type="Button" parent="."]
margin_left = 150.0
margin_top = 90.0
margin_right = 220.0
margin_bottom = 160.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "6"

[node name="7" type="Button" parent="."]
margin_top = 15.0
margin_right = 70.0
margin_bottom = 85.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "7"

[node name="8" type="Button" parent="."]
margin_left = 75.0
margin_top = 15.0
margin_right = 145.0
margin_bottom = 85.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "8"

[node name="9" type="Button" parent="."]
margin_left = 150.0
margin_top = 15.0
margin_right = 220.0
margin_bottom = 85.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "9"

[node name="0" type="Button" parent="."]
margin_left = 230.0
margin_top = 165.0
margin_right = 380.0
margin_bottom = 235.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="Minus" type="Button" parent="."]
margin_left = 230.0
margin_top = 90.0
margin_right = 300.0
margin_bottom = 160.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "-"

[node name="Dot" type="Button" parent="."]
margin_left = 310.0
margin_top = 90.0
margin_right = 380.0
margin_bottom = 160.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "."

[node name="Del" type="Button" parent="."]
margin_left = 230.0
margin_top = 15.0
margin_right = 300.0
margin_bottom = 85.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "del"

[node name="Clear" type="Button" parent="."]
margin_left = 310.0
margin_top = 15.0
margin_right = 380.0
margin_bottom = 85.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "CA"

[connection signal="pressed" from="1" to="." method="_on_1_pressed"]
[connection signal="pressed" from="2" to="." method="_on_2_pressed"]
[connection signal="pressed" from="3" to="." method="_on_3_pressed"]
[connection signal="pressed" from="4" to="." method="_on_4_pressed"]
[connection signal="pressed" from="5" to="." method="_on_5_pressed"]
[connection signal="pressed" from="6" to="." method="_on_6_pressed"]
[connection signal="pressed" from="7" to="." method="_on_7_pressed"]
[connection signal="pressed" from="8" to="." method="_on_8_pressed"]
[connection signal="pressed" from="9" to="." method="_on_9_pressed"]
[connection signal="pressed" from="0" to="." method="_on_0_pressed"]
[connection signal="pressed" from="Minus" to="." method="_on_Minus_pressed"]
[connection signal="pressed" from="Dot" to="." method="_on_Dot_pressed"]
[connection signal="pressed" from="Del" to="." method="_on_Del_pressed"]
[connection signal="pressed" from="Clear" to="." method="_on_Clear_pressed"]
